feat(backend): calculate metrics for multiple workers (#67)
* feat(backend): calculate metrics for multiple workers


* fix


* update


* update


* update


* update


* update


* update


* update


* update


* update


* update


* update


* update


* update


* update


* update


---------
